<resources>
    <string name="app_name">EasyMPG</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Vehicles">Vehicles</string>
    <!--Add fill up variables -->
    <string name="odometer">Odometer: </string>
    <string name="missedPreviousFillUp">Missed previous fill up:</string>
    <string name="price">Price </string>
    <string name="date">Date: </string>
    <string name="fuelPrice">Fuel Price: </string>
    <string name="totalCost">Total cost:</string>
    <string name="today">Today</string>


    <string-array name="fuelMeasurementArray">
        <item>Liters (L)</item>
        <item>US Gallons (Gal)</item>
        <item>Imperial gallons</item>
    </string-array>
    <string name="Liters">Liters (L)</string>
    <string name="USGallons">US Gallons (Gal)</string>
    <string name="UKGallons">Imperial gallons</string>

    <string-array name="odometerMeasurementArray">
        <item>Miles</item>
        <item>KM</item>
    </string-array>
    <string name="Miles">Miles</string>
    <string name="KM">KM</string>


    <!-- Vehicle Info -->
    <string name="Recommended">Recommended</string>
    <string name="Optional"><u>Optional</u></string>
    <string name="Make">Make:</string>
    <string name="Model">Model:</string>
    <string name="Year">Year:</string>
    <string name="NickName">Nick Name:</string>
    <string name="OdometerUnits">Odometer Units:</string>
    <string name="fuelInputUnits">Fuel input:</string>

    <string name="Done">Done</string>
    <string name="Confirm">Confirm</string>
    <string name="Cancel">Cancel</string>

    <string name="firstStartDialogTitle">Welcome New User</string>
    <string name="firstStartDialogBody">Please add a vehicle / specify your measurement units to start using the app</string>

</resources>
